phpMyFAQ 2.8.25
Codename "Perdita"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.8.25 - 2015-08    -
- added American English translation (Stewart Day)
- updated Japanese translation
- updated Brazilian Portuguese translation
- fixed some minor bugs (Thorsten)

Version 2.8.24 - 2015-07-27
- updated Farsi translation (aysabzevar)
- fixed some minor bugs (Thorsten)

Version 2.8.23 - 2015-06-13
- updated bundled Symfony ClassLoader to version 2.6.9 (Thorsten)
- fixed "remember me" issues (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.22 - 2015-03-31
- updated Czech translation
- updated Brazilian Portuguese translation
- fixed some minor bugs (Thorsten)

Version 2.8.21 - 2015-02-28
- added experimental rewrite rules for IIS7 and IIS8 (Thorsten)
- improved usability in admin backend (Thorsten)
- improved HTML5 support in editor (Thorsten)
- improved code coverage (Thorsten)
- updated Brazilian Portuguese translation
- fixed some minor bugs (Thorsten)

Version 2.8.20 - 2015-02-07
- added experimental support for HHVM 3.4.2+
- added experimental support for PHP 7.0
- updated Brazilian Portuguese translation
- updated French translation (Olivier Binet)
- fixed some minor bugs (Thorsten)

Version 2.8.19 - 2014-12-31
- fixed some minor bugs (Thorsten)

Version 2.8.18 - 2014-11-30
- added clickjacking prevention (Thorsten, Narendra Bhati)
- fixed some minor bugs (Thorsten)

Version 2.8.17 - 2014-11-05
- fixed typo in update script (Thorsten)

Version 2.8-16 - 2014-11-03
- fixed restore from backup (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.15 - 2014-10-02
- fixed broken installation (Thorsten)
- updated Farsi translation

Version 2.8.14 - 2014-10-01
- fixed installation compatibility with MySQL 5.1 and MySQL 5.5 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.13 - 2014-09-16
- fixed multiple security vulnerabilities (Nikhil Srivastava, Thorsten)