@@ -9,6 +9,7 @@ Version 2.8.25 - 2015-08    -
 - added American English translation (Stewart Day)
 - updated Japanese translation
 - updated Brazilian Portuguese translation
+- updated Italian translation (Amedeo Fragai)
 - fixed some minor bugs (Thorsten)
 
 Version 2.8.24 - 2015-07-27
